@@ -1,3 +1,25 @@
+//  Copyright (c) Microsoft Corporation.
+//  All rights reserved.
+//
+//  This code is licensed under the MIT License.
+//
+//  Permission is hereby granted, free of charge, to any person obtaining a copy
+//  of this software and associated documentation files(the "Software"), to deal
+//  in the Software without restriction, including without limitation the rights
+//  to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
+//  copies of the Software, and to permit persons to whom the Software is
+//  furnished to do so, subject to the following conditions :
+//
+//  The above copyright notice and this permission notice shall be included in
+//  all copies or substantial portions of the Software.
+//
+//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+//  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+//  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+//  THE SOFTWARE.
 package com.microsoft.identity.common;
 
 import android.os.Environment;
@@ -51,7 +73,7 @@ public class CodeMarkerManager {
         CodeMarkerManager.scenarioCode = "";
     }
 
-    public static void writeToFile(String fileName) {
+    public static void writeToFile(final String fileName) {
         String stringToWrite = getFileContent();
         File file = Environment.getExternalStorageDirectory();
         String strFilePath = file.getAbsolutePath() + "/" + fileName;
@@ -74,12 +96,13 @@ public class CodeMarkerManager {
         String stringToWrite = "TimeStamp,Marker,Time,Thread,CpuUsed,CpuTotal,ResidentSize,VirtualSize,WifiSent,WifiRecv,WwanSent,WwanRecv,AppSent,AppRecv,Battery,SystemDiskRead,SystemDiskWrite";
 
         for(CodeMarker codeMarker : codeMarkers) {
-            stringToWrite += "\n"
-                            + codeMarker.getTimeStamp()
-                            + "," + codeMarker.getMarker()
-                            + "," + codeMarker.getTimeMilliseconds()
-                            + "," + codeMarker.getThreadId()
-                            + "," + ",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA";
+            StringBuilder thisLine = new StringBuilder();
+            thisLine.append("\n").append(codeMarker.getTimeStamp())
+                    .append(",").append(codeMarker.getMarker())
+                    .append(",").append(codeMarker.getTimeInMilliseconds())
+                    .append(",").append(codeMarker.getThreadId())
+                    .append(",").append(",NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA");
+            stringToWrite += thisLine.toString();
         }
         return stringToWrite;
     }
