@@ -38,6 +38,7 @@ import androidx.annotation.VisibleForTesting;
 import androidx.localbroadcastmanager.content.LocalBroadcastManager;
 
 import com.microsoft.identity.common.CodeMarkerManager;
+import com.microsoft.identity.common.CodeMarkersConstants;
 import com.microsoft.identity.common.WarningType;
 import com.microsoft.identity.common.adal.internal.AuthenticationConstants;
 import com.microsoft.identity.common.exception.BaseException;
@@ -133,7 +134,7 @@ public class CommandDispatcher {
     @VisibleForTesting(otherwise = VisibleForTesting.PRIVATE)
     public static FinalizableResultFuture<CommandResult> submitSilentReturningFuture(@SuppressWarnings(WarningType.rawtype_warning) @NonNull final BaseCommand command) {
 
-        CodeMarkerManager.markCode("10011");
+        CodeMarkerManager.markCode(CodeMarkersConstants.ACQUIRE_TOKEN_SILENT_START);
         final String methodName = ":submitSilent";
         Logger.verbose(
                 TAG + methodName,
@@ -166,7 +167,7 @@ public class CommandDispatcher {
             sSilentExecutor.execute(new Runnable() {
                 @Override
                 public void run() {
-                    CodeMarkerManager.markCode("10012");
+                    CodeMarkerManager.markCode(CodeMarkersConstants.ACQUIRE_TOKEN_SILENT_EXECUTOR_START);
                     try {
                         final CommandParameters commandParameters = command.getParameters();
                         final String correlationId = initializeDiagnosticContext(commandParameters.getCorrelationId(), commandParameters.getSdkType() == null ? SdkType.UNKNOWN.getProductName() : commandParameters.getSdkType().getProductName(), commandParameters.getSdkVersion());
@@ -191,9 +192,9 @@ public class CommandDispatcher {
 
                         //If nothing in cache, execute the command and cache the result
                         if (commandResult == null) {
-                            CodeMarkerManager.markCode("10013");
+                            CodeMarkerManager.markCode(CodeMarkersConstants.ACQUIRE_TOKEN_SILENT_COMMAND_EXECUTION_START);
                             commandResult = executeCommand(command);
-                            CodeMarkerManager.markCode("10014");
+                            CodeMarkerManager.markCode(CodeMarkersConstants.ACQUIRE_TOKEN_SILENT_COMMAND_EXECUTION_END);
                             cacheCommandResult(command, commandResult);
                         } else {
                             Logger.info(
@@ -227,7 +228,7 @@ public class CommandDispatcher {
                         }
                         DiagnosticContext.clear();
                     }
-                    CodeMarkerManager.markCode("10020");
+                    CodeMarkerManager.markCode(CodeMarkersConstants.ACQUIRE_TOKEN_SILENT_FUTURE_OBJECT_CREATION_END);
                 }
             });
             return finalFuture;
